# CopilotKit

./: package.json  pnpm-lock.yaml
.github/workflows/: publish-release.yml  showcase_lint_prod.yml  showcase_promote.yml  test_e2e-dojo.yml  test_unit-python-sdk.yml
examples/coagents-enterprise-crewai-crews/agent-py/: pyproject.toml
examples/coagents-enterprise-crewai-crews/ui/: package.json  pnpm-lock.yaml
examples/coagents-qa-native/agent-js/: package.json  pnpm-lock.yaml
examples/coagents-qa-native/ui/: package.json  pnpm-lock.yaml
examples/coagents-starter-crewai-crews/agent-py/: pyproject.toml
examples/copilot-anthropic-pinecone/: package.json  pnpm-lock.yaml
examples/copilot-openaI-mongodb-atlas-vector-search/: package-lock.json  package.json  pnpm-lock.yaml
examples/integrations/a2a-middleware/: package-lock.json
examples/integrations/langgraph-python/: package-lock.json  package.json
examples/integrations/langgraph-python-threads/: package-lock.json
examples/langgraph-tutorial-customer-support/ui/: package-lock.json
examples/shared/: requirements-template.txt
examples/showcases/deep-agents-job-search/agent/: pyproject.toml
showcase/eval-webhook/: package.json
showcase/harness/: package.json
showcase/scripts/: package-lock.json  package.json
showcase/shell/: package-lock.json  package.json
showcase/shell-dashboard/: package-lock.json  package.json
showcase/shell-docs/: package-lock.json  package.json
showcase/shell-dojo/: package-lock.json  package.json
showcase/tests/: package-lock.json  package.json
(+74 files in other folders)
